[package]
name = "extreme"
version = "1.0.1"
authors = ["Tyler Neely <t@jujit.su>"]
edition = "2018"
description = "Very boring async function runner. MIT/Apache-2.0 license is available for spacejam's github sponsors."
license = "GPL-3.0"
homepage = "https://github.com/spacejam/extreme"
repository = "https://github.com/spacejam/extreme"
keywords = ["async"]
categories = ["asynchronous"]
documentation = "https://docs.rs/extreme"
readme = "README.md"
